# rp-can2040

./: .gitmodules  Cargo.toml  flake.nix
examples/: dual_loopback.rs  embassy_receive.rs  embedded_can_frame.rs  receive.rs  transmit.rs
examples/base/: loopback.rs  receive.rs  transmit.rs
examples/embedded_can/: loopback.rs  receive.rs  transmit.rs
rp-can2040-sys/: CMakeLists.txt  Cargo.toml  build.rs
rp-can2040-sys/src/: bindings.rs  lib.rs
src/: embedded_can_impl.rs  lib.rs
