[workspace]
resolver = "2"
members = [".", "rp-can2040-sys"]

[package]
name = "rp-can2040"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Slabinski <tslabinski@slabity.dev>"]
license = "GPL-3.0"
description = "A Can2040 port for Rust."
repository = "https://github.com/Slabity/rp-can2040"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["can", "rp2040", "rp2350", "pico", "pio"]

[features]
default = ["rp2040"]
rp2040 = ["rp-can2040-sys/rp2040"]
rp2350 = ["rp-can2040-sys/rp2350"]

[dependencies]
rp-can2040-sys = { path = "rp-can2040-sys" }
cortex-m = "0.7"
defmt = "0.3"
embedded-can = "0.4"
nb = "1.1"

[dev-dependencies]
cortex-m-rt = "0.7"
defmt-rtt = "0.4"
panic-probe = "0.3"
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
rp-pico = "0.9"

[[example]]
name = "can2040_demo"
required-features = ["rp2040"]
